--- a/Sources/Guestbook/Guestbook.Silverlight/MainPage.xaml
+++ b/Sources/Guestbook/Guestbook.Silverlight/MainPage.xaml
@@ -4,11 +4,60 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DesignHeight="768"
-    d:DesignWidth="1024"
+    xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk"
+    d:DesignHeight="600"
+    d:DesignWidth="800"
     mc:Ignorable="d">
-
     <Grid>
+        <Grid
+            Width="800"
+            Margin="0 50"
+            VerticalAlignment="Top">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
 
+            <Image
+                Grid.Row="0"
+                Grid.Column="1"
+                Width="86"
+                Margin="10 0"
+                Source="Content/Images/guestbook.png" />
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="0"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center"
+                FontFamily="Microsoft JhengHei Light"
+                FontSize="48"
+                Foreground="#0D2038"
+                Text="GUEST" />
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="2"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                FontFamily="Microsoft JhengHei Light"
+                FontSize="48"
+                Foreground="#0D2038"
+                Text="BOOK" />
+
+            <Border
+                Grid.Row="1"
+                Grid.Column="0"
+                Grid.ColumnSpan="3"
+                Margin="0 10 0 0"
+                BorderBrush="#0D2038"
+                BorderThickness="0 3 0 0"
+                Padding="0 10">
+                <ListBox ItemsSource="{Binding Messages}" />
+            </Border>
+        </Grid>
     </Grid>
 </UserControl>
