modify AsyncPagedCollectionView to use async/await paradigm to featch the messages.

--- a/Sources/Guestbook/Guestbook.Silverlight/MainPage.xaml
+++ b/Sources/Guestbook/Guestbook.Silverlight/MainPage.xaml
@@ -54,9 +54,20 @@
                 Grid.ColumnSpan="3"
                 Margin="0 10 0 0"
                 BorderBrush="#0D2038"
-                BorderThickness="0 3 0 0"
+                BorderThickness="0 3 0 2"
                 Padding="0 10">
-                <ListBox ItemsSource="{Binding Messages}" />
+                <ItemsControl ItemsSource="{Binding Messages}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Border
+                                Margin="0 0.5"
+                                Background="LightGray"
+                                Padding="10">
+                                <TextBlock Text="{Binding Text}" />
+                            </Border>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
             </Border>
         </Grid>
     </Grid>
