--- a/Sources/Guestbook/Guestbook.Silverlight/MainPage.xaml
+++ b/Sources/Guestbook/Guestbook.Silverlight/MainPage.xaml
@@ -4,18 +4,17 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:primitives="clr-namespace:System.Windows.Controls.Primitives"
     xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk"
     d:DesignHeight="600"
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Grid>
-        <Grid
-            Width="800"
-            Margin="0 50"
-            VerticalAlignment="Top">
+        <Grid Width="800" Margin="0 50">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -47,28 +46,37 @@
                 FontSize="48"
                 Foreground="#0D2038"
                 Text="BOOK" />
-
             <Border
                 Grid.Row="1"
                 Grid.Column="0"
                 Grid.ColumnSpan="3"
-                Margin="0 10 0 0"
+                Margin="0 10"
                 BorderBrush="#0D2038"
                 BorderThickness="0 3 0 2"
                 Padding="0 10">
                 <ItemsControl ItemsSource="{Binding Messages}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <primitives:UniformGrid Columns="1" />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Border
-                                Margin="0 0.5"
-                                Background="LightGray"
-                                Padding="10">
+                            <Border Padding="10">
                                 <TextBlock Text="{Binding Text}" />
                             </Border>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
             </Border>
+            <sdk:DataPager
+                Grid.Row="2"
+                Grid.Column="0"
+                Grid.ColumnSpan="3"
+                HorizontalAlignment="Center"
+                DisplayMode="Numeric"
+                PageSize="10"
+                Source="{Binding Messages}" />
         </Grid>
     </Grid>
 </UserControl>
