--- a/Sources/Guestbook/Guestbook.Silverlight/MainPage.xaml
+++ b/Sources/Guestbook/Guestbook.Silverlight/MainPage.xaml
@@ -4,7 +4,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:primitives="clr-namespace:System.Windows.Controls.Primitives"
     xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk"
     d:DesignHeight="600"
     d:DesignWidth="800"
@@ -53,29 +52,78 @@
                 BorderBrush="#0D2038"
                 BorderThickness="0 3 0 2"
                 Padding="0 10">
-                <ItemsControl ItemsSource="{Binding Messages}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <primitives:UniformGrid Columns="1" />
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Border Padding="10">
-                                <TextBlock Text="{Binding Text}" />
-                            </Border>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
+                <ScrollViewer BorderThickness="0" VerticalScrollBarVisibility="Auto">
+                    <ItemsControl ItemsSource="{Binding Messages}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Border
+                                    Height="60"
+                                    Margin="0 2.5"
+                                    Background="#F2F2F5">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition Width="*" />
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="*" />
+                                        </Grid.RowDefinitions>
+                                        <Border
+                                            Grid.Row="0"
+                                            Grid.RowSpan="2"
+                                            Background="#E7E7E7"
+                                            Padding="10">
+                                            <Image
+                                                HorizontalAlignment="Center"
+                                                VerticalAlignment="Center"
+                                                Source="Content/Images/message.png" />
+                                        </Border>
+                                        <TextBlock
+                                            Grid.Row="0"
+                                            Grid.RowSpan="2"
+                                            Grid.Column="1"
+                                            Margin="10 7"
+                                            TextTrimming="WordEllipsis"
+                                            TextWrapping="Wrap">
+                                            <TextBlock.Inlines>
+                                                <Run FontWeight="Bold" Text="{Binding UserName}" />
+                                                <Run Text="|" />
+                                                <Run Text="{Binding Email}" />
+                                                <LineBreak />
+                                                <Run Text="{Binding Text}" />
+                                            </TextBlock.Inlines>
+                                        </TextBlock>
+                                    </Grid>
+                                </Border>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </ScrollViewer>
             </Border>
             <sdk:DataPager
                 Grid.Row="2"
                 Grid.Column="0"
                 Grid.ColumnSpan="3"
                 HorizontalAlignment="Center"
-                DisplayMode="Numeric"
-                PageSize="10"
+                DisplayMode="FirstLastNumeric"
                 Source="{Binding Messages}" />
+            <StackPanel
+                Grid.Row="2"
+                Grid.Column="0"
+                Grid.ColumnSpan="3"
+                HorizontalAlignment="Right"
+                Orientation="Horizontal">
+                <TextBlock
+                    Margin="5 0"
+                    VerticalAlignment="Center"
+                    Text="Page Count:" />
+                <ComboBox
+                    x:Name="PageCountVariantsBox"
+                    ItemsSource="{Binding PageCountVariants}"
+                    SelectedItem="{Binding Messages.PageSize, Mode=TwoWay}">
+                </ComboBox>
+            </StackPanel>
         </Grid>
     </Grid>
 </UserControl>
