--- a/Sources/Guestbook/Guestbook.Silverlight/MainPage.xaml
+++ b/Sources/Guestbook/Guestbook.Silverlight/MainPage.xaml
@@ -140,17 +140,19 @@
                             Content="Add Comment"
                             Style="{StaticResource FormButtonStyle}" />
                         <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-                            <TextBlock
-                                Margin="0 0 5 0"
-                                VerticalAlignment="Center"
-                                Text="Order By:" />
+                            <TextBlock VerticalAlignment="Center" Text="Order By:" />
                             <ComboBox
+                                Margin="5 0"
                                 VerticalAlignment="Center"
                                 DisplayMemberPath="Value"
                                 ItemsSource="{Binding OrderByVariants}"
-                                SelectedValue="{Binding ActiveOrderBy, Mode=TwoWay}"
+                                SelectedValue="{Binding OrderBy, Mode=TwoWay}"
                                 SelectedValuePath="Key">
                             </ComboBox>
+                            <CheckBox
+                                VerticalAlignment="Center"
+                                Content="Ascending"
+                                IsChecked="{Binding OrderByDirection, Mode=TwoWay}" />
                         </StackPanel>
                     </Grid>
                     <ScrollViewer
